--- a/demo/tutorials/getting_started/boilerplate.html
+++ b/demo/tutorials/getting_started/boilerplate.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../dist/foundry.min.js"></script>
+		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 
