--- a/demo/tutorials/getting_started/empty_application.html
+++ b/demo/tutorials/getting_started/empty_application.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../dist/foundry.min.js"></script>
+		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 
@@ -17,18 +17,17 @@
 			// Phase 1: Instantiation
 			var app = new Foundry.Application();
 
-			// Phase 2: Configuration
-			app.config = new Hash();
+			// Phase 2: Acquire Dependencies
 			app.moduleManager = new Module.Manager();
-
-			app.configure(function(config) {
-				config.eagerLoadModules = true;
-			});
+			app.frontController = new Oxydizr.FrontController();
+			app.moduleManager.moduleObserver = new Module.FrontControllerModuleObserver();
+			app.moduleManager.moduleObserver.frontController = app.frontController;
+			app.dispatcher = new Beacon.Dispatcher();
 
 			// Phase 3: Initialization
-			window.onload = function() {
-				app.init(document.getElementsByTagName("html")[0]);
-			};
+			app.init(document.documentElement, {
+				eagerLoadModules: true
+			});
 
 			// Phase 5: Destruction
 			window.onunload = function() {
