Cleaned up folder structure
- Moving application.js into namespace
- Moving application spec
- Removing unneeded cruft. Updating demos to use distributable code.
- Version bump in bower.json

--- a/demo/index.html
+++ b/demo/index.html
@@ -208,7 +208,7 @@ app.objectFactory
 
 	var DependencyConfig = {
 		application: {
-			className: "Application",
+			className: "Foundry.Application",
 			singleton: true,
 			properties: {
 				config: { id: "applicationConfig" },
