--- a/demo/tutorials/getting_started/final.html
+++ b/demo/tutorials/getting_started/final.html
@@ -10,28 +10,8 @@
 		<div data-modules="WelcomeModule"></div>
 		<div data-modules="WelcomeModule" data-module-options='{"backgroundColor": "#f0f0f0"}'></div>
 
-		<!-- Class Libraries -->
-		<script type="text/javascript" src="../../../vendor/inherit.js/lib/function.js"></script>
-		<script type="text/javascript" src="../../../vendor/callbacks/src/callbacks.js"></script>
-		<script type="text/javascript" src="../../../vendor/callbacks/src/callbacks/utils.js"></script>
-		<script type="text/javascript" src="../../../vendor/dom_event_delegator/lib/dom/events/delegator.js"></script>
-		<script type="text/javascript" src="../../../vendor/element_store/lib/element_store.js"></script>
-		<script type="text/javascript" src="../../../vendor/element_store/lib/element_store/utils.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events/dispatcher.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events/event.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events/publisher.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events/application_events.js"></script>
-		<script type="text/javascript" src="../../../vendor/events/lib/events/notifications.js"></script>
-		<script type="text/javascript" src="../../../vendor/hash/lib/hash.js"></script>
-
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../vendor/module_controller/lib/module.js"></script>
-		<script type="text/javascript" src="../../../vendor/module_controller/lib/module/factory.js"></script>
-		<script type="text/javascript" src="../../../vendor/module_controller/lib/module/manager.js"></script>
-		<script type="text/javascript" src="../../../vendor/module_controller/lib/module/manager/lazy_loader.js"></script>
-		<script type="text/javascript" src="../../../vendor/module_controller/lib/module/manager/sub_module_properties.js"></script>
-		<script type="text/javascript" src="../../../src/application.js"></script>
+		<script type="text/javascript" src="../../../dist/foundry.min.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./modules/welcome_module.js"></script>
@@ -39,7 +19,7 @@
 		<script type="text/javascript">
 
 			// Phase 1: Instantiation
-			var app = new Application();
+			var app = new Foundry.Application();
 
 			// Phase 2: Configuration
 			app.config = new Hash();
