--- a/tutorials/examples/introduction-to-modules/index.html
+++ b/tutorials/examples/introduction-to-modules/index.html
@@ -60,7 +60,7 @@
 		</div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="/js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./selection_module.js"></script>
