--- a/tutorials/examples/client-side-templates/index.html
+++ b/tutorials/examples/client-side-templates/index.html
@@ -10,16 +10,16 @@
 		<div data-modules="postDetail" data-module-options='{"post_id": 1}'>Loading ...</div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="/js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
 
 		<!-- Client Side Template Libs -->
-		<script type="text/javascript" src="/js/mustache.js/mustache.js"></script>
-		<script type="text/javascript" src="/js/promise/src/promise.js"></script>
-		<script type="text/javascript" src="/js/bloodhound/src/bloodhound.js"></script>
-		<script type="text/javascript" src="/js/bloodhound/src/bloodhound/adapters/mustache_template.js"></script>
-		<script type="text/javascript" src="/js/bloodhound/src/bloodhound/rendering_engines/dynamic_rendering_engine.js"></script>
-		<script type="text/javascript" src="/js/bloodhound/src/bloodhound/view_providers/mustache_view_provider.js"></script>
-		<script type="text/javascript" src="/js/bloodhound/src/bloodhound/view_resolvers/dynamic_view_resolver.js"></script>
+		<script type="text/javascript" src="../../../js/mustache.js/mustache.js"></script>
+		<script type="text/javascript" src="../../../js/promise/src/promise.js"></script>
+		<script type="text/javascript" src="../../../js/bloodhound/src/bloodhound.js"></script>
+		<script type="text/javascript" src="../../../js/bloodhound/src/bloodhound/adapters/mustache_template.js"></script>
+		<script type="text/javascript" src="../../../js/bloodhound/src/bloodhound/rendering_engines/dynamic_rendering_engine.js"></script>
+		<script type="text/javascript" src="../../../js/bloodhound/src/bloodhound/view_providers/mustache_view_provider.js"></script>
+		<script type="text/javascript" src="../../../js/bloodhound/src/bloodhound/view_resolvers/dynamic_view_resolver.js"></script>
 
 		<!-- Application Files -->
 		<script type="text/javascript" src="./post_detail_module.js"></script>
@@ -38,7 +38,7 @@
 						properties: {
 							container: "document",
 							provider: "viewProvider",
-							templateUrlBase: { value: "/tutorials/examples/client-side-templates" }
+							templateUrlBase: { value: "." }
 						}
 					},
 					renderingEngine: {
