--- a/tutorials/examples/getting-started/final.html
+++ b/tutorials/examples/getting-started/final.html
@@ -11,7 +11,7 @@
 		<div data-modules="WelcomeModule" data-module-options='{"backgroundColor": "#f0f0f0"}'></div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="/js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./welcome_module.js"></script>
