--- a/tutorials/examples/responsive-modules/index.html
+++ b/tutorials/examples/responsive-modules/index.html
@@ -46,7 +46,7 @@
 		</fieldset>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="/js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./complex_module.js"></script>
