--- a/tutorials/examples/unit-testing/index.html
+++ b/tutorials/examples/unit-testing/index.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="/js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./task_list_module.js"></script>
