Decoupling and trimming dependencies
- Trimming dependencies
- Upgrade to Hypodermic. Better builds.
- Version bump on module-manager
- Offical dependency versions and fixing demos.

--- a/demo/tutorials/task_list/index.html
+++ b/demo/tutorials/task_list/index.html
@@ -51,6 +51,8 @@
 
 		<!-- Base Framework -->
 		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../bower_components/module-base/src/module/base.js"></script>
+		<script type="text/javascript" src="../../../bower_components/module-utils/dist/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./modules/task_list_module.js"></script>
