--- a/demo/index.html
+++ b/demo/index.html
@@ -199,6 +199,8 @@ app.objectFactory
 
 <!-- Foundry -->
 <script type="text/javascript" src="../dist/foundry.concat.js"></script>
+<script type="text/javascript" src="../bower_components/module-base/src/module/base.js"></script>
+<script type="text/javascript" src="../bower_components/module-utils/dist/module-utils.concat.js"></script>
 
 <!-- Application Files -->
 <script type="text/javascript" src="./js/modules/date_created_module.js"></script>
