--- a/demo/tutorials/getting_started/boilerplate.html
+++ b/demo/tutorials/getting_started/boilerplate.html
@@ -12,6 +12,8 @@
 
 		<!-- Base Framework -->
 		<script type="text/javascript" src="../../../dist/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../bower_components/module-base/src/module/base.js"></script>
+		<script type="text/javascript" src="../../../bower_components/module-utils/dist/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./modules/welcome_module.js"></script>
