New version of foundry. Fixed tutorials.

--- a/tutorials/examples/client-side-templates/index.html
+++ b/tutorials/examples/client-side-templates/index.html
@@ -10,7 +10,9 @@
 		<div data-modules="postDetail" data-module-options='{"post_id": 1}'>Loading ...</div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Client Side Template Libs -->
 		<script type="text/javascript" src="../../../js/mustache.js/mustache.js"></script>
