--- a/tutorials/examples/lazy-loading-modules/eager-and-lazy-loading.html
+++ b/tutorials/examples/lazy-loading-modules/eager-and-lazy-loading.html
@@ -44,7 +44,9 @@
 		<div class="module loading" data-modules="PeekABooModule" data-module-lazyload="any" style="left: 105%; top: 200px;"></div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./peek_a_boo_module.js"></script>
