--- a/tutorials/examples/new-modules-on-the-fly/index.html
+++ b/tutorials/examples/new-modules-on-the-fly/index.html
@@ -122,7 +122,9 @@
 		</div>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./task_list_module.js"></script>
