--- a/tutorials/examples/getting-started/boilerplate.html
+++ b/tutorials/examples/getting-started/boilerplate.html
@@ -8,7 +8,9 @@
 	<body>
 
 		<!-- Base Framework -->
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 
