--- a/tutorials/examples/integrating-pollyfills/index.html
+++ b/tutorials/examples/integrating-pollyfills/index.html
@@ -39,9 +39,10 @@
 
 		<!-- Base Framework -->
 		<script type="text/javascript" src="../../../js/yepnope.1.5.4-min.js"></script>
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/foundry.concat.js"></script>
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/pollyfill_promise.js"></script>
-		<script type="text/javascript" src="../../../js/foundry/v0.1.1/pollyfill_promise/yepnope.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry.concat.js"></script>
+		<script type="text/javascript" src="../../../js/foundry/v0.1.2/foundry_pollyfill_yepnope.concat.js"></script>
+		<script type="text/javascript" src="../../../js/module-base/module/base.js"></script>
+		<script type="text/javascript" src="../../../js/module-utils/module-utils.concat.js"></script>
 
 		<!-- Your Application Files -->
 		<script type="text/javascript" src="./complex_module.js"></script>
