--- a/tutorials/examples/client-side-templates/index.html
+++ b/tutorials/examples/client-side-templates/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Foundry: Rendering Client Side Templates</title>
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<div data-modules="postDetail" data-module-options='{"post_id": 1}'></div>
