--- a/tutorials/examples/dependency-injection/index.html
+++ b/tutorials/examples/dependency-injection/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Foundry: Dependency Injection</title>
+		<meta name="viewport" content="width=device-width">
 		<style type="text/css">
 			.module {
 				border: 1px solid #000;
