--- a/tutorials/examples/lazy-loading-modules/index.html
+++ b/tutorials/examples/lazy-loading-modules/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Foundry: Lazy Loading Modules</title>
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<div data-modules="AverageJoeModule" data-module-lazyload="any">Loading...</div>
